[project]
name = "pylotus-rpc"
version = "3.0"
description = "A comprehensive Python client library for the Lotus JSON-RPC API, enabling type-safe interaction with Filecoin blockchain nodes. Provides access to chain data, state queries, miner operations, and network management with a clean 3-layer architecture."
readme = "README.md"
license = { file="LICENSE" }
keywords = ["lotus", "filecoin", "rpc", "json-rpc", "api", "client", "python"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  { name = "Jason Byteforgia" }
]
dependencies = [
  "requests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.urls]
Homepage = "https://github.com/FilForge/pylotus-rpc"
Issues = "https://github.com/FilForge/pylotus-rpc/issues"

[tool.hatch.build.targets.wheel]
packages = ["pylotus_rpc"]
